[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/Music and Sounds/Hit.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/Actors/Enemies/GrandSlime.png" type="Texture" id=2]
[ext_resource path="res://src/Enemies/EnemyMediumSlime.gd" type="Script" id=3]
[ext_resource path="res://src/Hitbox/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Hitbox/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Stats/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Shadows/SmallShadow.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 96, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 192, 288, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 192, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "move_right",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "move_up",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "move_left",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "move_down",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 23.5632
height = 30.5281

[sub_resource type="CircleShape2D" id=15]
radius = 37.1628

[sub_resource type="CircleShape2D" id=16]
radius = 88.2226

[sub_resource type="CircleShape2D" id=17]
radius = 38.3027

[node name="MediumSlime" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 16
collision_mask = 17
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( -5.68434e-14, 18.2043 )
scale = Vector2( 5.59698, 3.72069 )
texture = ExtResource( 8 )

[node name="SlimeAnimation" type="AnimatedSprite" parent="."]
scale = Vector2( 0.932278, 0.737846 )
frames = SubResource( 13 )
animation = "move_down"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 14 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -1.5 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 15 )

[node name="Stats" parent="." instance=ExtResource( 6 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 16 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 17 )

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="SlimePosition1" type="Position2D" parent="."]
position = Vector2( 0, -11.2246 )

[node name="SlimePosition2" type="Position2D" parent="."]
position = Vector2( 0, 13.4695 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]
